# task_processor

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml  code-quality-check.yml  sonarcloud.yml  testing.yml
docs/: administration.md  api.md  architecture.md  deployment.md  development.md  outbox_pattern.md  testing.md
infrastructure/: .dockerignore  Dockerfile  docker-compose.yml
src/: __init__.py  app.py  di.py  enums.py
src/database/migrations/: env.py
src/database/migrations/versions/: 0341e742d50e_remove_is_active_fields.py  (+6 more)
src/database/models/: base.py  dlq_messages.py  outbox_messages.py  tasks.py
src/messaging/: queues.py
src/repositories/: dlq_messages.py  outbox_messages.py  soft_delete_sqlalchemy_repository.py  sqlalchemy_repository.py  tasks.py
src/routers/: __init__.py  tasks.py
src/schemas/: common.py  dlq_messages.py  outbox_messages.py  tasks.py
src/services/: outbox_messages.py  tasks.py
src/settings/: __init__.py  common.py  postgres.py  rabbit_mq.py  settings.py
src/workers/: utilities.py
src/workers/dlq_consumer/: dlq_consumer_worker.py  run_dlq_consumer_worker.py
src/workers/outbox_cleanup/: outbox_cleanup_worker.py  run_outbox_cleanup_worker.py
src/workers/outbox_publisher/: outbox_publish_worker.py  run_outbox_publish_worker.py  utilities.py
src/workers/task_processor/: run_task_processor_worker.py  task_processor_worker.py
tests/: conftest.py
tests/e2e/: conftest.py  test_health_check.py
tests/integration/: conftest.py  test_outbox_repository.py  test_sqlalchemy_repository.py  test_task_repository.py  test_task_service.py
tests/integration/test_routers/: test_tasks_router.py
tests/load/: locustfile.py
tests/unit/: test_app.py  test_di.py  test_enums.py  test_queues.py  test_schemas.py  test_settings.py
tests/unit/test_mq/: test_outbox_message_service.py  test_utilities.py
tests/unit/test_repositories/: test_outbox_repository.py  test_soft_delete_repository.py  test_sqlalchemy_repository.py  test_task_repository.py
tests/unit/test_routers/: test_tasks_router.py
tests/unit/test_services/: test_task_service.py
tests/unit/test_workers/: test_dlq_consumer_worker.py  test_outbox_cleanup_worker.py  test_run_workers.py  test_task_processor_worker.py
