[project]
name = "async-task-manager"
version = "0.1.0"
description = "Асинхронный сервис управления задачами"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "dishka>=1.10.1",
    "fastapi>=0.136.3",
    "faststream[rabbit]>=0.7.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "sqlakeyset>=2.0.1775222100",
    "sqlalchemy>=2.0.50",
    "uv>=0.11.19",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "debugpy>=1.8.21",
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.16",
    "testcontainers>=4.14.2",
]

[tool.black]
line-length = 120
extend-exclude = "/__pycache__/"
target-version = ["py312"]

[tool.ruff]
line-length = 120
lint.select = [
    "PLR",   # pylint refactoring
    "PLW",   # pylint warning
    "UP",    # pyupgrade
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "W",     # pycodestyle warnings
    "I",     # isort
    "B",     # flake8-bugbear
    "S",     # flake8-bandit
    "C",     # flake8-comprehensions
    #"D",     # pydocstyle (docstring conventions)
    "T20",   # flake8-print
    "YTT",   # flake8-2020
    "RUF",   # Ruff-specific rules
    "SIM",   # flake8-simplify
    "RET",   # flake8-return
    "TCH",   # flake8-type-checking
    "PERF",  # Perflint
    "PTH",   # flake8-use-pathlib
    "DTZ",   # flake8-datetimez
    "EM",    # flake8-errmsg
]

lint.ignore = [
    "RUF001",
    "RUF002",
    "RUF003",
    "RUF022",
    "EM102",
]
target-version = "py312"

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
strict_optional = true
exclude = ["__pycache__"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (require database)",
    "e2e: End-to-end tests (require full stack)",
]
